[fix] MeasurementDaoImpl: setParent parameter used correctly [enh] Save sale products coming from operation group's products and packets
Signed-off-by: lp1ee9d <ludovic.pecquot@e-is.pro>